block theme added

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 
 # DO NOT ignore these themes...
 !/themes/custom-theme-4
+!/themes/custom-block-theme-4
 
 #---------------------------
 # WordPress plugins
